update constants, fix alignment in video list, add test fro thumbnail loader

--- a/sources/easygenerator.Web/Content/video.less
+++ b/sources/easygenerator.Web/Content/video.less
@@ -28,6 +28,7 @@
 
         .video-list-item {
             display: inline-block;
+            vertical-align: top;
             margin-left: 45px;
             margin-bottom: 30px;
             -webkit-border-radius: 5px;
